client/components/confirmation-modal/style.scss
@import '../../styles/abstracts/styles.scss';

.wcstripe-confirmation-modal {
	// increasing the specificity of the styles, to ensure it is honored
	&#{&} {
		max-width: 600px;
		min-width: 400px;
	}

	// to ensure that the separator extends all the way, even with different versions of Gutenberg
	.components-modal__content {
		padding: 0 $grid-unit-30 $grid-unit-30;
	}

	.components-modal__header {
		margin: 0 -#{$grid-unit-30} $grid-unit-30;
		padding: 0 $grid-unit-30;
	}

	&__separator {
		margin: $grid-unit-30 -#{$grid-unit-30};
	}

	&__footer {
		display: flex;
		justify-content: flex-end;

		> * {
			&:not( :first-child ) {
				margin-left: $grid-unit-20;
			}
		}
	}
}

